--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <h2>Momen Kita</h2>
         <p>Kenangan kebersamaan kita yang penuh cinta dan cerita.</p>
         <div class="photo-gallery">
-            <img src="media/poto1.jpg" alt="Foto 1" class="memory-photo">
+            <img src="Media/poto1.jpg" alt="Foto 1" class="memory-photo">
             <img src="Media/poto2.jpg" alt="Foto 2" class="memory-photo">
-            <img src="media/poto3.jpg" alt="Foto 3" class="memory-photo">
-            <img src="media/poto4.jpg" alt="Foto 4" class="memory-photo">
+            <img src="Media/poto3.jpg" alt="Foto 3" class="memory-photo">
+            <img src="Media/poto4.jpg" alt="Foto 4" class="memory-photo">
         </div>
         <video controls class="memory-video">
-            <source src="media/kebersamaan.mp4" type="video/mp4">
+            <source src="Media/kebersamaan.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
