--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p class="birthday-wishes">
           Selamat ulang tahun, sayang. Hari ini, aku tidak hanya merayakan bertambahnya usiamu, tapi juga keberuntungan hidupku karena memiliki kamu di sisiku. Kamu adalah cahaya di hariku yang paling kelam, kehangatan di malamku yang paling dingin, dan kekuatan di setiap langkahku. Terima kasih telah menjadi alasan senyumku, tempat aku pulang, dan bagian terbaik dari hidupku. Terima kasih juga udah selalu support aku dan nerima aku, kamu hebat berani nyoba sesuatu yang baru, walaupun cape ga nyampang nyerah, aku bangga sama kamu sayang. Semoga tahun ini membawa semua kebahagiaan yang layak kamu dapatkan, karena kamu adalah hadiah terindah dalam hidupku. Aku mencintaimu, lebih dari kata-kata bisa menggambarkan. I love youu
         </p>
-        <img src="media/cake.png" alt="Birthday Cake" class="cake">
+        <img src="Media/cake.png" alt="Birthday Cake" class="cake">
         <p>Tiup lilinnya, ya!</p>
     </div>
 </section>
