--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="Media/poto4.jpg" alt="Foto 4" class="memory-photo">
         </div>
         <video controls class="memory-video">
-            <source src="Media/kebersamaan.mp4" type="video/mp4">
+            <source src="Media/Video1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
