--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <span class="emoji">🎉</span>
 </div>
 
+    <audio autoplay loop>
+    <source src="Media/Lagu1.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+
 <!-- Hero Section -->
 <section class="hero">
   <p class="intro">Hai, Cantik...</p>
